- Fixes broken watch (forgot to specify dev configuration) - Minor tweaks to improve usability on mobile

--- a/src/main/resources/static/css/navigation.css
+++ b/src/main/resources/static/css/navigation.css
@@ -25,8 +25,8 @@
 .navBarContainer .logo {
   text-shadow: 1px 1px 0 rgb(223, 227, 229), 2px 2px 0 rgba(0, 0, 0, 0.25);
   font-size: 33px;
-  padding-right: 30px;
-  padding-left: 15px;
+  padding-right: 10px;
+  padding-left: 5px;
 }
 
 .navBarContainer .loginButton {
